--- a/Os/CMakeLists.txt
+++ b/Os/CMakeLists.txt
@@ -16,42 +16,58 @@ set(MOD_DEPS
 )
 # Basic source files used in every OSAL layer.  Contains common code and helpers.
 set(SOURCE_FILES
-    "${CMAKE_CURRENT_LIST_DIR}/IntervalTimerCommon.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/TaskString.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/TaskCommon.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/QueueCommon.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/QueueString.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/IPCQueueCommon.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/SimpleQueueRegistry.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/MemCommon.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/ValidateFileCommon.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/ValidatedFile.cpp"
-    "${CMAKE_CURRENT_LIST_DIR}/FileCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/IntervalTimerCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/TaskString.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/TaskCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/QueueCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/QueueString.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/IPCQueueCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/SimpleQueueRegistry.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/MemCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/ValidateFileCommon.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/ValidatedFile.cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/FileCommon.cpp"
 )
 # Check for default loger
-if (NOT FPRIME_DISABLE_DEFAULT_LOGGER)
-    list(APPEND SOURCE_FILES
-        "${CMAKE_CURRENT_LIST_DIR}/LogDefault.cpp"
-    )
+if(NOT FPRIME_DISABLE_DEFAULT_LOGGER)
+  list(APPEND SOURCE_FILES
+    "${CMAKE_CURRENT_LIST_DIR}/LogDefault.cpp"
+  )
 endif()
 # Posix systems typically share these
-if (FPRIME_USE_POSIX)
-    list(APPEND SOURCE_FILES
-        "${CMAKE_CURRENT_LIST_DIR}/LogPrintf.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Pthreads/Queue.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Pthreads/BufferQueueCommon.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Pthreads/PriorityBufferQueue.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Pthreads/MaxHeap/MaxHeap.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Linux/File.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Posix/Task.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Linux/InterruptLock.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Linux/WatchdogTimer.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Posix/IntervalTimer.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Posix/Mutex.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Linux/FileSystem.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Posix/TaskId.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/Linux/Directory.cpp"
-    )
+if(FPRIME_USE_POSIX)
+  list(APPEND SOURCE_FILES
+    "${CMAKE_CURRENT_LIST_DIR}/LogPrintf.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Pthreads/Queue.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Pthreads/BufferQueueCommon.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Pthreads/PriorityBufferQueue.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Pthreads/MaxHeap/MaxHeap.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Linux/File.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Posix/Task.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Linux/InterruptLock.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Linux/WatchdogTimer.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Posix/IntervalTimer.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Posix/Mutex.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Linux/FileSystem.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Posix/TaskId.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/Linux/Directory.cpp"
+  )
+endif()
+
+# FreeRTOS OSAL implementation
+if(${PLATFORM} STREQUAL "FreeRTOSSim")
+  list(APPEND SOURCE_FILES
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/File.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/FileSystem.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/InterruptLock.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/IntervalTimer.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/Mutex.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/Queue.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/Task.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/TaskCommon.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/TaskId.cpp"
+    "${CMAKE_CURRENT_LIST_DIR}/FreeRTOSSim/WatchdogTimer.cpp"
+  )
 endif()
 
 # Darwin IPC queue implementation
@@ -59,9 +75,9 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
   list(APPEND SOURCE_FILES
     "${CMAKE_CURRENT_LIST_DIR}/MacOs/IPCQueueStub.cpp"
   )
-elseif(${PLATFORM} STREQUAL "FreeRTOSSim")
-  message("FreeRTOSSim QUEUE FreeRTOSSim QUEUE FreeRTOSSim QUEUE")
-  # @todo Why queue implementation is handled here ? Complete ?
+elseif(${PLATFORM} STREQUAL "FreeRTOSSim")  # avoid next condition entry
+  message("FreeRTOSSim Queue implementation")
+  # FreeRTOS Queue implementation include above
 # Linux IPC queues implementation
 elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "arm-linux-gnueabihf")
   list(APPEND SOURCE_FILES
@@ -82,6 +98,12 @@ if (BAREMETAL_SCHEDULER)
     list(APPEND SOURCE_FILES "${CMAKE_CURRENT_LIST_DIR}/Baremetal/Task.cpp")
 endif()
 register_fprime_module()
+
+if(${PLATFORM} STREQUAL "FreeRTOSSim")
+  # Has to be done after register_fprime_module()
+  find_library(freertos "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
+  target_link_libraries(Os freertos)
+endif()
 
 # Add stubs directory for testing builds
 if (CMAKE_BUILD_TYPE STREQUAL "TESTING")
