--- a/.gitignore
+++ b/.gitignore
@@ -76,4 +76,4 @@ GTestBase.*
 **/DefaultDict/serializable/*
 
 # Clone CHESS-mission/pusopen as "Lib" in fprime root - Due to license restriction with PUSOpen
-#Lib    # disable to allow VSCode to index Lib file
+Lib    # disable to allow VSCode to index Lib file
