Update PUSOpen mdb path

--- a/Svc/GroundInterface/CMakeLists.txt
+++ b/Svc/GroundInterface/CMakeLists.txt
@@ -7,18 +7,20 @@
 # Note: using PROJECT_NAME as EXECUTABLE_NAME
 ####
 
+SET(PUSOPEN_PATH ${FPRIME_FRAMEWORK_PATH}/Lib)
+SET(MDB_PATH ${CMAKE_CURRENT_LIST_DIR}/../../../gs/mdb)
+
 set(SOURCE_FILES
   "${CMAKE_CURRENT_LIST_DIR}/GroundInterfaceComponentAi.xml"
   "${CMAKE_CURRENT_LIST_DIR}/GroundInterface.cpp"
-  "${CMAKE_CURRENT_LIST_DIR}/../../Lib/mdb/pusopen_onboard_mdb.c"       # PUSOpen mission database
+  "${MDB_PATH}/pusopen_onboard_mdb.c"                    # PUSOpen mission database
 )
 set(MOD_DEPS "Utils/Types")
 register_fprime_module()
 
 add_definitions(-D_LINUB1804_GCC750)
-include_directories(../../Lib/Includes)
-find_library(PUSOPEN pusopen ../../Lib/lib)
-# PUSOPEN /home/jonathan/tm/CHESS/05_FS/fprime/Lib/lib/libpusopen.a found
+include_directories(${PUSOPEN_PATH}/Includes)
+find_library(PUSOPEN pusopen ${PUSOPEN_PATH}/lib)
 target_link_libraries(Svc_GroundInterface ${PUSOPEN})
 
 # Rules based unit testing
@@ -31,7 +33,7 @@ set(UT_SOURCE_FILES
         "${CMAKE_CURRENT_LIST_DIR}/test/ut/Tester.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/test/ut/TestMain.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/test/ut/GroundInterfaceRules.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/../../Lib/mdb/pusopen_onboard_mdb.c"         # PUSOpen mission database
+        "${MDB_PATH}/pusopen_onboard_mdb.c"                     # PUSOpen mission database
         )
 # Test Includes for this UT
 register_fprime_ut()
